# pdnsd

./: .travis.yml  Cargo.toml  README.md  TODO.org
src/: buf.rs  cache.rs  datagram.rs  dns.rs  errors.rs  main.rs  query.rs  server.rs  server2.rs  socket_buffer.rs  users.rs
